tests/invalid_ast_samples/ed2c2099cc5d8fe63005e937fcb54dea9556738234f4a47d366c930e26e1c927.py
from ast import Constant
from ast import Load
from ast import Match
from ast import match_case
from ast import MatchSequence
from ast import MatchValue
from ast import Module
from ast import Name
from ast import Pass

tree = Module(
    body=[
        Match(
            subject=Name(id="name_2", ctx=Load()),
            cases=[
                match_case(
                    pattern=MatchSequence(
                        patterns=[MatchValue(value=Constant(value=None))]
                    ),
                    body=[Pass()],
                )
            ],
        )
    ],
    type_ignores=[],
)

# version: 3.12.0
# seed = 4071349
#
# Source:
# match name_2:
#     case [None]:
#         pass
#
#
# Error:
#     ValueError('unexpected constant inside of a literal pattern')
